--- a/css/hm_popup.css
+++ b/css/hm_popup.css
@@ -19,27 +19,27 @@ div#dragsurface {
 	
 div.hmpopup, p.hmpopup {
 	margin: 0; padding: 0;
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-family: <%UIFONT%>;
 }
 
 div#hmpopupbox {
 	position: absolute; 
 	display: none; 
-	border: thin solid #bfbfbf;
-	background-color: #bfbfbf;
+	border: thin solid <%POPUP_TITLEBAR_BGCOLOR%>;
+	background-color: <%POPUP_TITLEBAR_BGCOLOR%>;
 	top: 1rem; left: 1rem;
 	width: 20rem;
 	height: 3.6rem;
-	box-shadow: 0.125rem 0.125rem 0.500rem 0.025rem #959595;
+	box-shadow: 0.125rem 0.125rem 0.500rem 0.025rem <%SHADOW_COLOR%>;
 	z-index: 20000;
 	}
 div#hmpopuptitlebar {
 	position: absolute;
 	top: 0; left: 0; right: -2px; 
 	height: 3rem;
-	background-color: #bfbfbf;
+	background-color: <%POPUP_TITLEBAR_BGCOLOR%>;
 	padding: 0 0.3rem; 
-	color: #444444;
+	color: <%POPUP_TITLEBAR_TEXTCOLOR%>;
 	font-weight: bold;
 }
 div#hmpopuptitlebar p.hmpopup {
